@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ProcTblElement.icc,v 1.5 2000-03-02 01:45:10 kurasige Exp $
+// $Id: G4ProcTblElement.icc,v 1.6 2001-05-22 17:32:11 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -55,7 +55,7 @@ inline
 inline 
  G4ProcessManager* G4ProcTblElement::GetProcessManager(G4int index) const
 {
-  if ((index < pProcMgrVector->size()) && (index>=0)){
+  if ((index < G4int(pProcMgrVector->size())) && (index>=0)){
     return (*pProcMgrVector)[index];
   } else {
     return 0;
