@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ProcessVector.icc,v 1.1 2000-11-03 03:44:52 kurasige Exp $
+// $Id: G4ProcessVector.icc,v 1.2 2001-05-22 17:32:11 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 inline G4bool G4ProcessVector::operator==(const G4ProcessVector &right) const
@@ -50,8 +50,8 @@ inline G4bool G4ProcessVector::insert(G4VProcess* aProcess)
 
 inline G4bool G4ProcessVector::insertAt(G4int i,G4VProcess* aProcess)
 {
-  if ( (i<0) || (i>pProcVector->size()) ) return false;
-  if (i==pProcVector->size()) {
+  if ( (i<0) || (i>G4int(pProcVector->size())) ) return false;
+  if (i==G4int(pProcVector->size())) {
     pProcVector->push_back(aProcess);
   } else {
     G4ProcVector::iterator it=pProcVector->begin();
@@ -65,8 +65,7 @@ inline G4bool G4ProcessVector::insertAt(G4int i,G4VProcess* aProcess)
 inline G4VProcess* G4ProcessVector::removeAt(G4int i)
 {
   G4ProcVector::iterator it=pProcVector->begin();
-  int j;
-  for(j=0;j<pProcVector->size() && j<i;++j) it++;
+  for(size_t j=0;j<pProcVector->size() && G4int(j)<i;++j) it++;
   G4VProcess* rValue = *it;
   pProcVector->erase(it);
   return rValue;
