@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ProcessManager.cc,v 1.16 2000-06-15 15:34:12 kurasige Exp $
+// $Id: G4ProcessManager.cc,v 1.17 2001-05-22 17:32:11 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -211,7 +211,8 @@ G4int G4ProcessManager::GetProcessVectorIndex(
 	G4cout << " is not registered yet ";
       }
       if (ivec <0) {
-	G4cout << " illegal DoIt Index [= " << idx << "," << typ << "]";
+	G4cout << " illegal DoIt Index [= " << G4int(idx) << ","
+	                                    << G4int(typ) << "]";
       }
       G4cout << G4endl;
     }
@@ -432,7 +433,7 @@ G4int G4ProcessManager::AddProcess(
 
     } else {
       //add aProcess in ordering of ordProcVector
-      G4ProcessVector* pVector = theProcVector[ivec];
+      // G4ProcessVector* pVector = theProcVector[ivec];
       // find insert position
       G4int ip = FindInsertPosition(pAttr->ordProcVector[ivec], ivec);
       // insert 
@@ -593,7 +594,7 @@ void G4ProcessManager::SetProcessOrdering(
       G4cout <<  aErrorMessage << G4endl;
       G4cout << "particle[" + theParticleType->GetParticleName() +"] " ;
       G4cout << "process[" + aProcess->GetProcessName() + "]"<<  G4endl;
-      G4cout << " illegal DoIt Index [= " << idDoIt << "]";
+      G4cout << " illegal DoIt Index [= " << G4int(idDoIt) << "]";
       G4cout << G4endl;
     }
 #endif
@@ -657,7 +658,7 @@ void G4ProcessManager::SetProcessOrderingToFirst(
 #ifdef G4VERBOSE
     if (verboseLevel>0) {
       G4cout << "G4ProcessManager::SetProcessOrdering: ";
-      G4cout << " illegal DoIt Index [= " << idDoIt << "]";
+      G4cout << " illegal DoIt Index [= " << G4int(idDoIt) << "]";
       G4cout << G4endl;
     }
 #endif
