@@ -1,4 +1,4 @@
-$Id: History,v 1.16 2001-03-12 06:39:21 kurasige Exp $
+$Id: History,v 1.17 2001-05-22 17:32:10 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-- Mar. 12, 01  H.Kurashige (procman-V03-00-00)
+
+- May 22, 01  G.Cosmo (procman-V03-01-00)
+- Cleared pedantic warnings from Linux-g++ ISO/ANSI setup.
+
+- Mar 12, 01  H.Kurashige (procman-V03-00-00)
 - Modify Store/RetrievePhysicsTable methods 
   (add a bool argument to specify ascii/binary mode)  
 
